--- a/Maxamed_Abokor.mw
+++ b/Maxamed_Abokor.mw
@@ -27,210 +27,249 @@
 *
 *
 
-● 1 Yeesif maxmed (yeesif)
+● Yeesif maxmed (yeesif)
 
-2 Samane Yesif
+Samane Yesif
 
-3 Abdarahman Yesif
+Abdarahman Yesif
 
-4 Xassan yesif
+Xassan yesif
 
-5 Abreyn Yesif
+Abreyn Yesif
 
-6 Sahal yesif
+Sahal yesif
 
-7 Robleh yesif 
+Robleh yesif 
 
+● Aadan maxmed (Adan Madoobe) 
 
-8 ● Aadan maxmed (Adan Madoobe) 
+Aadan Maxamed  (Aadan madoobe)
 
-10 Ugaadh Aadan 
+-Wacays   Aadan.
 
-11 Wacays adan 
+-Ugaadh   Aadan
 
-12 Yoonis adan 
+-Yoonis    Aadan.
 
+<nowiki>#</nowiki>Yoonis_Aadan,
 
-13 Ismail Yoonis (bah Sanbuur)
+-Allamagan Yoonis
+ 
+-Ismaaciil Yoonis
 
-14 Allamaghan yoonis (bah sanbuur )
+-Cabdale Yoonis 
 
-15 Xasan yoonis 
+-Xasan Yoonis 
 
-16 Faahiye yoonis 
+1-Allamagan Yoonis iyo 2-Ismaaciil Yoonis (Bahsanbuur)
 
-17 Axmed yoonis. ( Rer xaaji)
+3- Cabdalle Yoonis (Bah-garxajis 
 
+Xasan Yoonis 
 
-18 ● Nuux Maxamed
+-Axmed Xasan
 
-19 Cabdalle Nuux
+-Faahiye Xasan
 
-20 Cabdalle Cabdille
+-Axmed Xasan  (Reer Xaaji)
 
-21 Xusen Cabdille
+Faahiye Xasan
 
-22 Libaan Cabdille 
+Cismaan Faahiye 
 
-23 Allamagan Cabdille
+- guuleed Faahiye 
 
+-ismaaciil faahiye
 
-24● Abokor Cabdulle. (Solamadow) 
+- Cali faahiye
 
-25 Ugaadh abokor
+- Xasan faahiye 
 
-26 Samatar abokor
+● Nuux Maxamed
 
-27 Roobsuge abkor
+Cabdalle Nuux
 
+Cabdalle Cabdille
 
+Xusen Cabdille
 
-28 ● Xassan Cabdille (Solamadow) 
+Libaan Cabdille 
 
+Allamagan Cabdille
 
-29 Geedi xasan ( bah rer dood)
+Maxamed magan
 
-30 Cali geedii 
+muuse Allamagan 
 
-31 Cumar cali
+faarax Allamagan
 
-32 Faarax cali
+cabdi magan 
 
-33 Maax Cali
+● Abokor Cabdulle. (Solamadow) 
 
-34 Warfaa Cali 
+Ugaadh abokor
 
+Samatar abokor
 
-35 Maxmed' xasan ( bah rer dood)
+Roobsuge abkor
 
-36 Abokor maxmed (Rer Abokor)
+● Xassan Cabdille (Solamadow) 
 
+Geedi xasan ( bah rer dood)
 
-38 Geldoon abokor
+Cali geedii 
 
-39 Faarax abokor 
+Cumar cali
 
-40 Guled abokor
+Faarax cali
 
+Maax Cali
 
-41 Allamagan xasan
+Warfaa Cali 
 
-42 Ciise Allamagan
+Maxmed' xasan ( bah rer dood)
 
-43 Cigaal .Allamagan
+Abokor maxmed (Rer Abokor)
 
-44 Maxed Allamagan
+Geldoon abokor
 
-45 Cabdi Allamagan
+Faarax abokor 
 
-46 Axmed Allamagan 
+Guled abokor
 
-47 .Bah-sanbuur 
+Allamagan xasan
 
-48 Bah-toljecle.
+Ciise Allamagan
 
-49 Bah-xasanjibriil 
+Cigaal .Allamagan
 
-50 Xusen axmed 
+Maxed Allamagan
 
-51 Xasan axmed
+Cabdi Allamagan
 
+Axmed Allamagan 
 
-52 ●Barre Cabdille. (Solamadow) 
+.Bah-sanbuur 
 
-53 Kuul bare
+Bah-toljecle.
 
-54 Axmed bare
+Bah-xasanjibriil 
 
-55 Bah yaaca 
+Xusen axmed 
 
-56 Caateye
+Xasan axmed
 
-57 Samatar bare
+●Barre Cabdille. (Solamadow) 
 
-58 Rooble samtar 
+Kuul bare
 
-59 Nabad bare ( Reer Nabad)
+Axmed bare
 
-60 Axmed nabad
+Bah yaaca 
 
-61 Cabane Nabad 
+Caateye
 
-62 Maxamed Nabad 
+Samatar bare
 
-63 Yabaal Nabad 
+Rooble samtar 
 
-64 ismaaciil Nabad 
+Gedi samatar
 
-65 Ciise ismacil
+Cabdille samatar
 
-66 Geedi ismacil 
+Nabad bare ( Reer Nabad)
 
-67 Cigaal nabad 
+Axmed nabad
 
-68 Cali cigal 
+Cabane Nabad 
 
-69 Maxamed cigaal
+Maxamed Nabad 
 
-70 Faatax nabad
+Yabaal Nabad 
 
-71 Maxmed fatax 
+ismaaciil Nabad 
 
-72 Yuusuf fatax
+Ciise ismacil
 
-73 Muse faatax
+Geedi ismacil 
 
-74 Cadawe Muse ( Rer cadaawe).
+Cigaal nabad 
 
+Cali cigal 
 
+Maxamed cigaal
 
-75 ● Faarax Cabdille 
+Faatax nabad
 
-76 bayle faarax 
+Maxmed fatax 
 
-78 Faahiye Faarax 
+Yuusuf fatax
 
-79 ● Axmad Faarax 
+Muse faatax
 
-80 Rooble axmed 
+Cadawe Muse ( Rer cadaawe).
 
-81 Abtidoon axmed. ( Rer Abti-doon)
+● Faarax Cabdille 
 
-82 Saalax Axmed. ( Rer Saalax)
+bayle faarax 
 
-83 Xildid axmed
+Faahiye Faarax 
 
-84 cabdi xildiid 
+● Axmad Faarax 
 
-85 Xaad axmed (Rer xaad )
+Rooble axmed 
 
-86 Diriye xaad 
+Abtidoon axmed. ( Rer Abti-doon)
 
-87 Muse xaad
+Saalax Axmed. ( Rer Saalax)
 
-88 Adan xaad
+Xildid axmed
 
-89 Biniin Axmed (Reer Biniin)
+cabdi xildiid 
 
-90 Xirsi biniin
+Xaad axmed (Rer xaad )
 
-91 Cali biniin
+Diriye xaad 
 
-92 Guuled biniin
+Muse xaad
 
-93 Abkor axmed 
+Adan xaad
 
-94 Ali abkor 
+Biniin Axmed (Reer Biniin)
 
-95 Jama ali
+Xirsi biniin
 
-96 Jibril ali
+Cali biniin
 
-97 Ismacil cali
+Guuled biniin
 
-98 Abdi abkor 
+Abkor axmed 
+
+Mumin Abokor
+
+Ali abkor 
+
+Cabdi cali
+
+Axmed cali
+
+Maxamed cali
+
+Jaamac cali
+
+Jibriil cali
+
+Warsame cali
+
+Ciid cali
+
+Abdi abkor 
 
 Muse abdi
+
+Fatax abdi
+
+Yusuf abdi
 
 Maxamad axmed (Mxmed axmed)
 
@@ -246,26 +285,31 @@ Cabdi Buraale
 
 Samatar Buraale
 
-
 Baded maxmed (Rer badeed)
 
 Samatar badeed
 
-Xasan baded 
+Xasan baded
+
+Cali baded
+
+Jiilal baded
 
 Sugulle baded
 
-
 Raage maxmed (Reer Raage)
 
+Odowaa raage
+
+Guleed raage
+
+Aadan raage
 
 Geedi Raage
 
 Buraale Raage
 
 Muse Raage
-
-
 
 ●Daahir faarax (Rer daahir)
 
@@ -290,7 +334,6 @@ Hamud Xassan
 Geedi Xassan 
 
 Cumar daahir
-
 
 Collow Cumar ( bah-adaxahman)
 
@@ -318,14 +361,14 @@ Muumin ismacil
 
 Yuusuf ismacil. ( Reer Yuusuf )
 
-
 Adan yuusuf 
 
 Odawa yusuf bah Cumar
 
 Maxamd yuusuf
 
-Wacays yuusuf 
+Wacays yuusuf
+ 
 Jibril yuusuf 
 
 Samatar Yuusuf ( bah-Awal)
@@ -336,22 +379,329 @@ Cabdi yuusuf
 
 Axmed yuusuf
 
-Muse Yuusuf. ( Rer Muuse)
+Muse Yuusuf  ( Rer Muuse)
 
 Iidle muse
-Aw maxamud muse
-Cawed muse
+
+Aw Maxamud muse
+
 Xirsi muse 
+
 Diriye muse
+
 Ducale muse
-Sicid musw
-Buralw muse 
-Farax muse 
-Adam musw 
-Cigal muse
-Warsamw muse 
-Aw liiban muuse
+
+Sicid Muse
+
+Buraew Muse
+
+Farax Mse 
+
+Adam Muse 
+
+Cigal Muse
+
+Warsame Muse
+ 
+Aw liiban Muuse
+
 Sardheye Muse
+
+Yesif
+
+Yesif
+
+yesif
+
+Yesif
+
+yesif
+
+yesif 
+
+Madoobe) 
+
+Aadan 
+
+adan 
+
+adan 
+
+Sanbuur)
+
+)
+
+yoonis 
+
+yoonis 
+
+xaaji)
+
+Maxamed
+
+Nuux
+
+Cabdille
+
+Cabdille
+
+Cabdille 
+
+Cabdille
+
+(Solamadow) 
+
+abokor
+
+abokor
+
+abkor
+
+
+
+(Solamadow) 
+
+dood)
+
+geedii 
+
+cali
+
+cali
+
+Cali
+
+Cali 
+
+dood)
+
+Abokor)
+
+abokor
+
+abokor 
+
+abokor
+
+xasan
+
+Allamagan
+
+.Allamagan
+
+Allamagan
+
+Allamagan
+
+Allamagan 
+
+.Bah-sanbuur 
+
+Bah-toljecle.
+
+Bah-xasanjibriil 
+
+axmed 
+
+axmed
+
+(Solamadow) 
+
+bare
+
+bare
+
+yaaca 
+
+Caateye
+
+bare
+
+samtar 
+
+Nabad)
+
+nabad
+
+Nabad 
+
+Nabad 
+
+Nabad 
+
+Nabad 
+
+ismacil
+
+ismacil 
+
+nabad 
+
+cigal 
+
+cigaal
+
+nabad
+
+fatax 
+
+fatax
+
+faatax
+
+cadaawe).
+
+
+
+Cabdille 
+
+faarax 
+
+Faarax 
+
+Faarax 
+
+axmed 
+
+Abti-doon)
+
+Saalax)
+
+axmed
+
+xildiid 
+
+)
+
+xaad 
+
+xaad
+
+xaad
+
+Biniin)
+
+biniin
+
+biniin
+
+biniin
+
+axmed 
+
+abkor 
+
+ali
+
+ali
+
+cali
+
+abkor 
+
+abdi
+
+axmed)
+
+maxmed 
+
+maxmed
+
+maxmed
+
+Buraale 
+
+Buraale 
+
+Buraale
+
+badeed)
+
+badeed
+
+baded 
+
+baded
+
+Raage)
+
+Raage
+
+Raage
+
+Raage
+
+
+
+daahir)
+
+Daahir 
+
+Daahir 
+
+Daahir 
+
+daahir 
+
+Daahir 
+
+Daahir 
+
+daahir 
+
+Xassan
+
+Xassan 
+
+Xassan 
+
+daahir
+
+bah-adaxahman)
+
+Cumar 
+
+(bah-adaxahman)
+
+(bah-adaxahman)
+
+Cumar 
+
+Cumar 
+
+Cumar 
+
+Abokor 
+
+Abokor 
+
+Abokor
+
+cumar 
+
+ismacil 
+
+)
+
+yuusuf 
+
+Cumar
+
+yuusuf
+
+yuusuf 
+
+bah-Awal)
+
+yuusuf 
+
+yuusuf
+
+yuusuf
+
+Muuse)
+
+dheye Muse
 
 
 
