Removing [[:c:File:Astaanta_DDS.pnj.jpg|Astaanta_DDS.pnj.jpg]], it has been deleted from Commons by [[:c:User:Regasterios|Regasterios]] because: [[:c:COM:OTRS|No permission]] since 6 August 2020.

--- a/Soomaali_Galbeed.mw
+++ b/Soomaali_Galbeed.mw
@@ -10,7 +10,7 @@
 | image_caption                   = 
 | image_flag                      = Somali State original flag.jpg
 | flag_alt                        = 
-| image_seal                      = Astaanta DDS.pnj.jpg
+| image_seal                      =
 | seal_alt                        = 
 | image_shield                    = 
 | shield_alt                      = 
