--- a/Maxamed_Abokor.mw
+++ b/Maxamed_Abokor.mw
@@ -16,18 +16,693 @@
 
 '''Maxamed Abokor'''  waa [[beel]] kamida beelaha [[Habar Jeclo]]. Waa beel baladhan oo 4 gobol [[Somaliland]] ka degta; Togdheer, Saaxil , Cayn iyo Saraar. Beeshu waxa oo kale ay degtaa [[Ethiopia]] (DDS) iyo [[Kenya]] (Isiolo, Tana River).
 
-== Sida beeshu u kala baxdo == 
+== Siday Beeshz U Kala Baxdo ==
 
-'''Maxamed Abokor wuxuu u kala baxaa:'''
+
+'''baxaa:'''
+
+*
 
 *
 
 *
-
-*
 *
 
-● Yeesif maxmed (yeesif)
+(yeesif)
+
+Yesif
+
+Yesif
+
+yesif
+
+Yesif
+
+yesif
+
+yesif 
+
+Madoobe) 
+
+madoobe)
+
+Aadan.
+
+Aadan
+
+Aadan.
+
+<nowiki>#</nowiki>Yoonis_Aadan,
+
+Yoonis
+ 
+Yoonis
+
+Yoonis 
+
+Yoonis 
+
+(Bahsanbuur)
+
+(Bah-garxajis 
+
+Yoonis 
+
+Xasan
+
+Xasan
+
+Xaaji)
+
+Xasan
+
+Faahiye 
+
+Faahiye 
+
+faahiye
+
+faahiye
+
+n faahiye 
+
+Maxamed
+
+Nuux
+
+Cabdille
+
+Cabdille
+
+Cabdille 
+
+Cabdille
+
+magan
+
+Allamagan 
+
+Allamagan
+
+magan 
+
+(Solamadow) 
+
+abokor
+
+abokor
+
+abkor
+
+(Solamadow) 
+
+dood)
+
+geedii 
+
+cali
+
+cali
+
+Cali
+
+Cali 
+
+dood)
+
+Abokor)
+
+abokor
+
+abokor 
+
+abokor
+
+xasan
+
+Allamagan
+
+.Allamagan
+
+Allamagan
+
+Allamagan
+
+Allamagan 
+
+.Bah-sanbuur 
+
+Bah-toljecle.
+
+Bah-xasanjibriil 
+
+axmed 
+
+axmed
+
+(Solamadow) 
+
+bare
+
+bare
+
+yaaca 
+
+Caateye
+
+bare
+
+samtar 
+
+samatar
+
+samatar
+
+Nabad)
+
+nabad
+
+Nabad 
+
+Nabad 
+
+Nabad 
+
+Nabad 
+
+ismacil
+
+ismacil 
+
+nabad 
+
+cigal 
+
+cigaal
+
+nabad
+
+fatax 
+
+fatax
+
+faatax
+
+cadaawe).
+
+Cabdille 
+
+faarax 
+
+Faarax 
+
+Faarax 
+
+axmed 
+
+Abti-doon)
+
+Saalax)
+
+axmed
+
+xildiid 
+
+)
+
+xaad 
+
+xaad
+
+xaad
+
+Biniin)
+
+biniin
+
+biniin
+
+biniin
+
+axmed 
+
+Abokor
+
+abkor 
+
+cali
+
+cali
+
+cali
+
+cali
+
+cali
+
+cali
+
+cali
+
+abkor 
+
+abdi
+
+abdi
+
+abdi
+
+axmed)
+
+maxmed 
+
+maxmed
+
+maxmed
+
+Buraale 
+
+Buraale 
+
+Buraale
+
+badeed)
+
+badeed
+
+baded
+
+baded
+
+baded
+
+baded
+
+Raage)
+
+raage
+
+raage
+
+raage
+
+Raage
+
+Raage
+
+
+daahir)
+
+Daahir 
+
+Daahir 
+
+Daahir 
+
+daahir 
+
+Daahir 
+
+Daahir 
+
+daahir 
+
+Xassan
+
+Xassan 
+
+Xassan 
+
+daahir
+
+bah-adaxahman)
+
+Cumar 
+
+(bah-adaxahman)
+
+(bah-adaxahman)
+
+Cumar 
+
+Cumar 
+
+Cumar 
+
+Abokor 
+
+Abokor 
+
+Abokor
+
+cumar 
+
+ismacil 
+
+)
+
+yuusuf 
+
+Cumar
+
+yuusuf
+
+yuusuf
+ 
+yuusuf 
+
+bah-Awal)
+
+yuusuf 
+
+yuusuf
+
+yuusuf
+
+Muuse)
+
+muse
+
+muse
+
+muse 
+
+muse
+
+muse
+
+Muse
+
+Muse
+
+Mse 
+
+Muse 
+
+Muse
+
+Muse
+ 
+Muuse
+
+Muse
+
+Yesif
+
+Yesif
+
+yesif
+
+Yesif
+
+yesif
+
+yesif 
+
+Madoobe) 
+
+Aadan 
+
+adan 
+
+adan 
+
+Sanbuur)
+
+)
+
+yoonis 
+
+yoonis 
+
+xaaji)
+
+Maxamed
+
+Nuux
+
+Cabdille
+
+Cabdille
+
+Cabdille 
+
+Cabdille 
+
+(Solamadow) 
+
+abokor
+
+abokor
+
+abkor
+
+
+
+(Solamadow) 
+
+dood)
+
+geedii 
+
+cali
+
+cali
+
+Cali
+
+Cali 
+
+dood)
+
+Abokor)
+
+abokor
+
+abokor 
+
+abokor
+
+xasan
+
+Allamagan
+
+.Allamagan
+
+Allamagan
+
+Allamagan
+
+Allamagan 
+
+.Bah-sanbuur 
+
+Bah-toljecle.
+
+Bah-xasanjibriil 
+
+axmed 
+
+axmed
+
+(Solamadow) 
+
+bare
+
+bare
+
+yaaca 
+
+Caateye
+
+bare
+
+samtar 
+
+Nabad)
+
+nabad
+
+Nabad 
+
+Nabad 
+
+Nabad 
+
+Nabad 
+
+ismacil
+
+ismacil 
+
+nabad 
+
+cigal 
+
+cigaal
+
+nabad
+
+fatax 
+
+fatax
+
+faatax
+
+cadaawe).
+
+
+
+Cabdille 
+
+faarax 
+
+Faarax 
+
+Faarax 
+
+axmed 
+
+Abti-doon)
+
+Saalax)
+
+axmed
+
+xildiid 
+
+)
+
+xaad 
+
+xaad
+
+xaad
+
+Biniin)
+
+biniin
+
+biniin
+
+biniin
+
+axmed 
+
+abkor 
+
+ali
+
+ali
+
+cali
+
+abkor 
+
+abdi
+
+axmed)
+
+maxmed 
+
+maxmed
+
+maxmed
+
+Buraale 
+
+Buraale 
+
+Buraale
+
+badeed)
+
+badeed
+
+baded 
+
+baded
+
+Raage)
+
+Raage
+
+Raage
+
+Raage
+
+
+
+daahir)
+
+Daahir 
+
+Daahir 
+
+Daahir 
+
+daahir 
+
+Daahir 
+
+Daahir  
+
+Xassan
+
+Xassan 
+
+Xassan 
+
+daahir
+
+bah-adaxahman)
+
+Cumar 
+
+(bah-adaxahman)
+
+(bah-adaxahman)
+
+Cumar 
+
+Cumar 
+
+Cumar 
+
+Abokor 
+
+Abokor 
+
+Abokor
+
+cumar 
+
+ismacil 
+
+)
+
+f 
+
+Cumar
+
+yuusuf
+
+f 
+
+bah-Awal)
+
+yuusuf 
+
+yuusuf
+
+yuusuf
+
+Muuse)
+
+
+■Maxamad Abokor 
+
+Yeesif maxmed (yeesif)
 
 Samane Yesif
 
@@ -406,304 +1081,6 @@ Warsame Muse
 Aw liiban Muuse
 
 Sardheye Muse
-
-Yesif
-
-Yesif
-
-yesif
-
-Yesif
-
-yesif
-
-yesif 
-
-Madoobe) 
-
-Aadan 
-
-adan 
-
-adan 
-
-Sanbuur)
-
-)
-
-yoonis 
-
-yoonis 
-
-xaaji)
-
-Maxamed
-
-Nuux
-
-Cabdille
-
-Cabdille
-
-Cabdille 
-
-Cabdille
-
-(Solamadow) 
-
-abokor
-
-abokor
-
-abkor
-
-
-
-(Solamadow) 
-
-dood)
-
-geedii 
-
-cali
-
-cali
-
-Cali
-
-Cali 
-
-dood)
-
-Abokor)
-
-abokor
-
-abokor 
-
-abokor
-
-xasan
-
-Allamagan
-
-.Allamagan
-
-Allamagan
-
-Allamagan
-
-Allamagan 
-
-.Bah-sanbuur 
-
-Bah-toljecle.
-
-Bah-xasanjibriil 
-
-axmed 
-
-axmed
-
-(Solamadow) 
-
-bare
-
-bare
-
-yaaca 
-
-Caateye
-
-bare
-
-samtar 
-
-Nabad)
-
-nabad
-
-Nabad 
-
-Nabad 
-
-Nabad 
-
-Nabad 
-
-ismacil
-
-ismacil 
-
-nabad 
-
-cigal 
-
-cigaal
-
-nabad
-
-fatax 
-
-fatax
-
-faatax
-
-cadaawe).
-
-
-
-Cabdille 
-
-faarax 
-
-Faarax 
-
-Faarax 
-
-axmed 
-
-Abti-doon)
-
-Saalax)
-
-axmed
-
-xildiid 
-
-)
-
-xaad 
-
-xaad
-
-xaad
-
-Biniin)
-
-biniin
-
-biniin
-
-biniin
-
-axmed 
-
-abkor 
-
-ali
-
-ali
-
-cali
-
-abkor 
-
-abdi
-
-axmed)
-
-maxmed 
-
-maxmed
-
-maxmed
-
-Buraale 
-
-Buraale 
-
-Buraale
-
-badeed)
-
-badeed
-
-baded 
-
-baded
-
-Raage)
-
-Raage
-
-Raage
-
-Raage
-
-
-
-daahir)
-
-Daahir 
-
-Daahir 
-
-Daahir 
-
-daahir 
-
-Daahir 
-
-Daahir 
-
-daahir 
-
-Xassan
-
-Xassan 
-
-Xassan 
-
-daahir
-
-bah-adaxahman)
-
-Cumar 
-
-(bah-adaxahman)
-
-(bah-adaxahman)
-
-Cumar 
-
-Cumar 
-
-Cumar 
-
-Abokor 
-
-Abokor 
-
-Abokor
-
-cumar 
-
-ismacil 
-
-)
-
-yuusuf 
-
-Cumar
-
-yuusuf
-
-yuusuf 
-
-bah-Awal)
-
-yuusuf 
-
-yuusuf
-
-yuusuf
-
-Muuse)
-
-dheye Muse
-
-
 
 
 
