*Empty MediaWiki Message*

--- a/Maxamed_Abokor.mw
+++ b/Maxamed_Abokor.mw
@@ -382,23 +382,25 @@ Xirsi muse
 
 Diriye muse
 
-Ducale muse
+Sardheye muse
 
-Sicid Muse
+muse
 
-Buraew Muse
+Muse
 
-Farax Mse 
+Muse
 
-Adam Muse 
+Mse 
 
-Cigal Muse
+Muse 
 
-Warsame Muse
+Muse
+
+Muse
  
-Aw liiban Muuse
+Muuse
 
-Sardheye Muse 
+Muse 
 
 *
 
@@ -543,13 +545,7 @@ axmed
 
 bare
 
-bare
-
-yaaca 
-
-Caateye
-
-bare
+bare 
 
 samtar 
 
@@ -583,11 +579,6 @@ nabad
 
 fatax 
 
-fatax
-
-faatax
-
-cadaawe).
 
 Cabdille 
 
@@ -607,13 +598,7 @@ axmed
 
 xildiid 
 
-)
-
-xaad 
-
-xaad
-
-xaad
+) 
 
 Biniin)
 
@@ -706,7 +691,6 @@ Daahir
 
 daahir 
 
-Xassan
 
 Xassan 
 
@@ -718,9 +702,6 @@ bah-adaxahman)
 
 Cumar 
 
-(bah-adaxahman)
-
-(bah-adaxahman)
 
 Cumar 
 
@@ -794,9 +775,6 @@ yesif
 
 Yesif
 
-yesif
-
-yesif 
 
 Madoobe) 
 
@@ -916,9 +894,6 @@ fatax
 
 fatax
 
-faatax
-
-cadaawe).
 
 
 
@@ -1034,11 +1009,7 @@ Cumar
 
 Cumar 
 
-Cumar 
-
-Cumar 
-
-Abokor 
+Cumar  
 
 Abokor 
 
@@ -1052,11 +1023,7 @@ ismacil
 
 f 
 
-Cumar
-
-yuusuf
-
-f 
+f
 
 bah-Awal)
 
@@ -1086,9 +1053,6 @@ yesif
 
 Madoobe) 
 
-madoobe)
-
-Aadan.
 
 Aadan
 
@@ -1244,13 +1208,6 @@ fatax
 
 fatax
 
-faatax
-
-cadaawe).
-
-Cabdille 
-
-faarax 
 
 Faarax 
 
@@ -1396,7 +1353,7 @@ Abokor
 
 cumar 
 
-ismacil 
+l 
 
 )
 
@@ -1434,17 +1391,14 @@ Muse
 
 Mse 
 
-Muse 
+se 
 
 Muse
 
-Muse
+M
  
 Muuse
 
 
 
-
-
-{{gumud}}
 {{beelaha soomaalida}}
