*Empty MediaWiki Message*

--- a/Masaajid_Cali_Guduud.mw
+++ b/Masaajid_Cali_Guduud.mw
@@ -1,4 +1,4 @@
-'''Masaajid Cali Gaduud''' wa dagmo ka tirsan Gobolka [[Shabeellaha Dhexe]]
+''' Cali Gaduud''' wa dagmo ka tirsan Gobolka [[Shabeellaha Dhexe]]
 {{Gumud}}
 {{Gobolada Soomaaliya}}
 [[Category:Shabeellaha Dhexe]].
