*Empty MediaWiki Message*

--- a/Muuse_Abokor.mw
+++ b/Muuse_Abokor.mw
@@ -2,7 +2,7 @@
 {{Infobox ethnic group|||group=|flag=[[File:Flag_of_Somaliland.svg|60px]][[File:Flag_of_Ethiopia.svg|60px]][[File:Flag_of_Kenya.svg|45px]]|image=|region1={{flagcountry|Somaliland}}|region2={{flagcountry|Ethiopia}}|region3={{flagcountry|Kenya}}|langs=[[Af Soomaali]],  [[Af Carabi]]|rels=[[Islam]] ([[Sunni Islam]])|related-c=[[Maxamed Abokor]], [[Samane abokor]], [[Cumar Jibriil]] iyo tolalka kalee ee beesha [[Habarjeclo]] <!-- CONFIRMED RELATIONS!!! -->|native_name=Miuse Abokor <br /> موسى أبوكر|native_name_lang=so|related_groups=}}
 
 [[File:Muuse abokor.jpg|thumb|{{en|1=muuse abokor}}]]
-Beesha '''Muuse Abokor''' waa midkamida beelaha Habarjeclo. Waa beel baladhan oo 5 gobol oo somaliland ah degta, Togdheer, Saaxil, Sool, Saraar, iyo Sanaag.
+Beesha '''Muuse Abokor''' waa midkamida beelaha Habarjeclo. Waa beel baladhan oo 5 gobol oo somaliland ah degta, Togdheer, Saaxil, Sool, Saraar, iyo Sanaag. Muuse Abokor wuxuu soohdin la leeyahay Muuse ismail and Muuse Arreh (HY) dhinaca waqooyi-bari, [[reer darawiish]] dhinaca bariga, [[beesha darawiish]] dhinaca bari-konfuur, iyo garxajis iyo Habar Awal dhinaca galbeedka.
 
 '''[[ceerigaabo]]''' '''[[sanaag]]'''
 
