--- a/Dowladii_Darawiish.mw
+++ b/Dowladii_Darawiish.mw
@@ -12,7 +12,8 @@
 |official_languages = {{hlist|[[Af-Soomaali|Soomaali]] |}}
 |GDP\BNP=rasmi-la'aan}}
 
-'''Dawlada Daraawiish''' ({{lang-ar|دولة الدراويش}}; {{lang-en|Dervish state}}) waxay ahayd maamul nooc boqotooyo ah oo jiray horaantii qarnigii 20aad deegaano ka mid ah meelaha dadka Soomaaliyeed ku dhaqan yihiin. Ismaamulkan waxaa aasaaskiisa lahaa Sayid Maxamed Cabdulle Xassan, oo ahaa hogaamiye diineed, abaanduulihii ciidamada Daraawiishta, hogaamiye bulsho iyo gabayaa caan ka ahaa geyiga Soomaaliyeed oo dhan.<ref>Encyclopedia of African history – Page 1406{{Full citation|date=January 2012}}</ref><ref>The modern history of Somaliland: from nation to state – Page 78{{Full citation|date=January 2012}}</ref><ref>Historical dictionary of Ethiopia – Page 405{{Full citation|date=January 2012}}</ref> 
+'''Dawlada Daraawiish''' ({{lang-ar|دولة الدراويش}}; {{lang-en|Dervish state}}) waxay ahayd maamul nooc gumeysi-diid ah oo jiray 1896kii ilaa 1920gii, qaran [[Dhulbahante]],<ref>[https://books.google.co.uk/books?id=t9MVBAAAQBAJ&pg=PA77&lpg=PA77&dq=%22briefly+to+attack+the+Mullah%22&source=bl&ots=l1sK2AjQ6l&sig=ACfU3U25TFZgu0vpautSB2QrMozeQUH6DQ&hl=en&sa=X&ved=2ahUKEwi6m6vVgvbqAhWiunEKHY3oCTgQ6AEwAHoECAYQAQ#v=onepage&q=%22briefly%20to%20attack%20the%20Mullah%22&f=false Churchill and the Mad Mullah of Somaliland: Betrayal and Redemption 1899-1921] |date=13 July 2018 }}, Roy Irons, 2013,  "The plan of operations is briefly to attack the Mullah with two columns, to crush those tribes of the Dolbahanta, who have willingly and persistently assisted him ... In the hands of the Mullah they are a constant menace to the peace of the country; without them the Mullah is powerless."</ref> 
+<ref>[http://dspace-roma3.caspur.it/bitstream/2307/2960/1/The%20scramble%20in%20the%20Horn%20of%20Africa.%20History%20of%20Somalia%20(1827-1977).pdf THE SCRAMBLE IN THE HORN OF AFRICA], Mohamed Omar, 2001,  "In his last letter the Mullah pretends to speak in the name of the Darwiishes, their Amir (himself), and the Dolbahanta tribes. This letter shows his object is to establish himself as the Ruler of the Dolbahanta, and it has a Mahdist look".</ref> deegaano ka mid ah beelaha saxiix-la'aan, heshiis-la'aan ama balanqaad-la'aan ahaa dhanka gumeysiga, iyo meelaha ay ku dhaqan yihiin. Ismaamulkan waxaa aasaaskiisa lahaa bulshada Dhulbahante<ref name="parl">Parliamentary Papers: 1850-1908 - Page 31 "the events of the past few months now force us to exercise greater interference than I should have contemplated for some time to come. Our hands have, so to say, been forced by this movement which originated in the Dolbahanta"</ref> iyo Sayid Maxamed Cabdulle Xassan, oo ahaa hogaamiye diineed, abaanduulihii ciidamada Daraawiishta, hogaamiye bulsho iyo gabayaa caan ka ahaa geyiga Soomaaliyeed oo dhan.<ref>Encyclopedia of African history – Page 1406{{Full citation|date=January 2012}}</ref><ref>The modern history of Somaliland: from nation to state – Page 78{{Full citation|date=January 2012}}</ref><ref>Historical dictionary of Ethiopia – Page 405{{Full citation|date=January 2012}}</ref> 
 
 ==Hordhac==
 Dowladii boqortooyada ee Daraawiishtu waxay halgan xornimo doon ah la galeen dhamaan gumeystihii dhulka joogay wakhtigaasi oo ugu horeeyay [[Ingiriis]] oo heystay [[Somaliland|gobolada Waqooyiga]] iyo [[Talyaani]]ga oo ka ariminayay gobolada koonfureed. After a quarter of a century of holding the British at bay, the Dervishes were finally defeated in 1920.
