--- a/Midab.mw
+++ b/Midab.mw
@@ -1,6 +1,6 @@
 [[File:Colouring_pencils.jpg|500px|thumb|Midabada]]
 
-'''Midab''' ({{lang-en|''color''}}; {{lang-ar|لون}}) waa muuqaalka shey ama walax leedahay. Waxaa jira noocyo badan oo midabo ah kuwaasi oo laga sameeyo iskudarka [[Midabada Asaasiga|midabada aasaasiga]], kuwaasi waxaa ka mid ah: [[Gaduud|Casaan]], [[Cagaar]], [[Madaw|Madow]], [[Baluug]], [[Jaale|Huruud]], [[buni]], [[basli]], [[baxri]], [[cowlaan]], [[cowl]] iyo kuwo kale oo badan. Wax kasto oo aduunka yaalo waxoo leeyahay midab, inta aa ka eheen biyaha oo wax wax kaladha lahayn.
+'''Midab''' ({{lang-en|''color''}}; {{lang-ar|لون}}) waa muuqaalka shey ama walax leedahay. Waxaa jira noocyo badan oo midabo ah kuwaasi oo laga sameeyo iskudarka [[Midabada Asaasiga|midabada aasaasiga]], kuwaasi waxaa ka mid ah: [[Gaduud|Casaan]], [[Cagaar]], [[Madaw|Madow]], [[cawaale]], ama [[baluug]][[Jaale|Huruud]], [[buni]], [[basli]], [[baxri]], [[cowlaan]], [[cowl]] iyo kuwo kale oo badan. Wax kasto oo aduunka yaalo waxoo leeyahay midab, inta aa ka eheen biyaha oo wax wax kaladha lahayn.
 
 * [[Midabada Asaasiga]]
 * [[Midabada]]
