--- a/Mudug.mw
+++ b/Mudug.mw
@@ -57,7 +57,7 @@
 * [[Hobyo]]
 * [[Ceeldheer old City|bandiiradleey]]
 * Bacadweyne
-Ciise calas
+* Ciise calas
 
 === Degmooyinka kale ===
 *[[Miiroon]]
