--- a/Mudug.mw
+++ b/Mudug.mw
@@ -56,12 +56,20 @@
 * [[goldogob|Galdogob]]
 * [[Hobyo]]
 * [[Ceeldheer old City|bandiiradleey]]
-* Bacadweyne
-* Ciise calas
+* [[Bacadweyne]]
+* [[Ciise calas]]
+* [[indhey]]
+* [[kashandha]]
+* [[dhageey]]
+* [[cagta]]
+* [[batiiq]]
+* [[waalax]]
+
 
 === Degmooyinka kale ===
 *[[Miiroon]]
-*Jiicdheere 
+*Jiicdheere
+*[[OWDHEERE]] 
 *[[Bursaalax|Dagaari]]
 * [[wisil]]
 * [[garacad]]
