*Empty MediaWiki Message*

--- a/Mudug.mw
+++ b/Mudug.mw
@@ -104,6 +104,7 @@
 * [[Balli busle|ballibus]]<nowiki/>l
 *[[celhuur]]
 *[[Cagaaran]]
+*[[tawakal]]
 *Farjano<ref>farjano waxay katirsantahay gobalka mudug waxay hoostagta dagmad galkacyo waxa daga beel waynat muse nolays ee idigfacle farjano waxay ledahay xolo dhaqato beeralay wana deegan baxad wayn oo cagaran</ref>
 *afbarwaaqo 
 *jiray 
