--- a/Warsangali.mw
+++ b/Warsangali.mw
@@ -1,6 +1,6 @@
 
 {{Infobox ethnic group|
-|group=Warsangali<br> ورسنجلي|image= [[File:Reer Daraawiish - warsangeli.png|300px]] 
+|group=Warsangali<br> ورسنجلي|image= [[File:Daraawiish - warsangeli.png|300px]] 
 |region1 = {{flagcountry|Soomaaliya}}
 |region3 = {{flagcountry|Itoobiya}}
 |region4 = {{flagcountry|Kenya}}
