*Empty MediaWiki Message*

--- a/Waqooyiga_Soomaaliya.mw
+++ b/Waqooyiga_Soomaaliya.mw
@@ -1,6 +1,6 @@
 [[File:Non-secessionist tribes of northern Somalia green.png|thumb|Beelaha Waqooyiga Soomaaliya aan ictiraaf rabin]]
 Waqooyiga Soomaaliya (af-ingiriis: "northern Somalia" ama "north Somalia") waa goobaha u dhexeysa Awdal ilaa Sanaag iyo Sool. Waqtiga gumeysiga, waqooyiga Soomaaliya waxaa la kala oran jirey British Somali Coast non-protectorate, dhanka Awdal, iyo British Somali Coast protectorate, dhanka maroodi Jeex ilaa Sarar, iyo [[Darawiish]], dhanka deegaanada [[Khatumo]] iyo [[Maakhir]]. Waqtiga qarniga 19ka, dhanka maatida, Waqooyiga Soomaaliya dhulkeed wuxuu ku magac dheeraa ''dhulka waqooyiga Soomaaliyeed''.
-[[File:Reer Daraawiish - warsangeli.png|thumb|.]]
+[[File:Daraawiish - warsangeli.png|thumb|.]]
 
 
 [[Category:Soomaaliya]]
