*Empty MediaWiki Message*

--- a/Galdogob.mw
+++ b/Galdogob.mw
@@ -60,7 +60,7 @@
 |website                = 
 }}
 [[File:Galdogob.jpeg|thumb|Galdogob]]
-[[File:Reer Daraawiish - warsangeli - mumin aden leelkase.png|thumb|reer goldogob]]
+[[File:Daraawiish - warsangeli - mumin aden leelkase.png|thumb|reer goldogob]]
 
 
 '''Galdogob''' waa dagmo ka tirsan [[Mudug|Gobolka Mudug]]. Waxaa ay dhinaca galbeed ka xigtaa magaalada Gaalkacyo cabbir ahaan waxa ay u jirtaa galkacyo: {{km|80}}. Galdogob waxaa ay ka mid tahay magaalooyinka ugu waawayn ee maamul goboleedka somalia 
