*Empty MediaWiki Message*

--- a/Awrtable.mw
+++ b/Awrtable.mw
@@ -1,5 +1,5 @@
 {{Caddayn u baahan}}
-[[File:Reer Daraawiish - warsan - awrtable.png|thumb|.]]
+[[File:Daraawiish - warsan - awrtable.png|thumb|.]]
 Awrtable waa beelaha ka mid ah daarood.
 
 [[category:qabiilada Soomaalida]]
