*Empty MediaWiki Message*

--- a/Wacbuudhan_Abgaal.mw
+++ b/Wacbuudhan_Abgaal.mw
@@ -42,8 +42,11 @@ SIYAASIYIINTA:
 
 *Raisulwasaarihii dowladii TFG Mudane Nur Xasan Xusen (Nur Adde)
 *Siyaasi Gudoomiye Cali Ugas Cabdulle
+* Wasiir Xussen Xassan ( Xussen Dheere)
+* wasiir  Eng Axmadey Sh. Xassan 
 *Siyaasi Senator Muse Sudi Yalaxow
 *Siyaasi Gudoomiye Cumar Finish
+*Siyaasi Gudoomiye Axmed meyre Makaran.
 *Siyaasi Amb. Maxamed Cali America
 * Siyaasi Cabdiraxmaan kooli
 *Siyaasi Gudoomiye Jeneral Muungaab
@@ -51,10 +54,15 @@ SIYAASIYIINTA:
 *Siyaasi Xildhibaan Yuusuf kabaale
 *Siyaasi Gudoomiye Axmed daaci
 *Siyaasi cabdiraxman Cumar Cisman Eng-Yarisow
+*Siyaasi Ambasador Jamal Xaaji Axmed
+*Siyaasi Sh Yusuf Haji Nor
+*Siyaasi Xildhibaan Xasan Saney Barre.
 *Siyaasi Xildhiban Carabow
 *Siyaasi Xildhibaan Ruqiyo Abshir Nuur
 *Siyaasi xildhibaan Mino Xasan shibis
+*Siyaasi Shador Xaaji Shadoor
 *Siyaasi xildhibaan Xuseen Caraale
+* Siyaasi Xildhibaan  sh Maxmed maxamud
 *Siyaasi Cabdicasiis cali ibraahim(Cabcasis xildhibaan)
 
 
@@ -76,15 +84,18 @@ Filasoof/Siyaasi/Caali/abwaan Faarax Gololeey
 SARAAKIISHA:
 
 *General Cali Maxamed Cali (Cali Shariif) AUN
+* Gener sh Nuun Maxmaed.
 Taliyihiin Ciidanka Ilaalada Wadooyinka ee Taraafiko
 *General Maxamed Nuur Cambuurre, AUN Ex-Taliyihii hore ee taraafiko marna soo qabtay Hogaanka Dembi Baarista ee C.I.D sidoo kale ahaa Engineer katirsan Dhismaha Booliska 1940-2011  
 *Jeneral AXMED jilacow Cadow(Godka jilacow) AUN
 *jeneraal muungaab.
+General Masdile
 *jeneraal Saneey
 *jeneraal qaafow
 *jeneral axmed shiikh cadow nur
 *Jeneraal cali calasow
 *Jeneraal quruurux
+* jeneral ibraahim
 *Jeneraal Mohamuud Xaaji Cali 
 *General Abukar Cali Axmed
 *G/Sare Shuceyb Nuur Cambuure Ciidanka Badda 
