*Empty MediaWiki Message*

--- a/Wacbuudhan_Abgaal.mw
+++ b/Wacbuudhan_Abgaal.mw
@@ -95,7 +95,9 @@ General Masdile
 *jeneral axmed shiikh cadow nur
 *Jeneraal cali calasow
 *Jeneraal quruurux
-* jeneral ibraahim
+* Col. 
+
+ibraahim mohamed 
 *Jeneraal Mohamuud Xaaji Cali 
 *General Abukar Cali Axmed
 *G/Sare Shuceyb Nuur Cambuure Ciidanka Badda 
