*Empty MediaWiki Message*

--- a/Wanlaweyn-.mw
+++ b/Wanlaweyn-.mw
@@ -1,13 +1,12 @@
 Wanlawayn waa dagmo ka tirsan gobolka shabeellaha hoose waxaana dago qomiyada digil iyo mirifle gaar ahaan beesha Shanta calemod oo ah Awdigil iyo Beesha Hubeer oo ah Mirifle/Raxawayn gaar ahay sagaal dagmada waxay caasimada muqdisho u jirtaa 90 km waxayna caan ku tahay airport ka ciidamada ee Bali doogle
 
-Shanta caleemo waxay ka kooban yahiin shan beelod oo kala ah 
-* shanta caleemood iyo
+Shanta caleemo waxay ka kooban yahiin:
+*Erdh
+* barbaare
+*Janbaluul
+* hubeer
 
-* gaaljecel gaar ahaan caloofi iyo makaahiil weyne
-
-* 
-
-* 
+*hiifmuge
 
 Beelaha shancaleemod badankood waxay degaan Degmada dhaxdeeda waloow ay jiraan tiuuloyin badan leeyahiin waxay u badan yahiin dad ganacsada '''''<nowiki/>''''' 
 
