Wuxuu dib u noqay badalkii oo sameeyay  [[Special:Contributions/Ibrahim23 W|Ibrahim23 W]] ([[User talk:Ibrahim23 W|talk]]) kuna celiyay badalkii ka  danbeeyay oo sameeyay  [[User:41.223.109.215|41.223.109.215]]

--- a/Wikipedia:Soo_Bandhigga_Sawirka_Xulka.mw
+++ b/Wikipedia:Soo_Bandhigga_Sawirka_Xulka.mw
@@ -1,34 +1,21 @@
-XUDUN. DEGMADAN WAXAY KU TAALA. WAQOOYIGA GOBOLKA SOOL
-waa. Degmada ugu wayn da.aah 
-Sool waxay caan ku tahay
-Xoolaha nool sida ariga geela
-Fardaha  
+{{Wikipedia:Soo Bandhigga Sawirka Xulka/Hordhac}}
+{| style="width:100%;clear:both; background:#E6F2FF; color:navy;"
+|-
+|colspan="2" style="border:1px solid #A3B1BF; padding:1em 1em 1em 1em; background-color:#fffddd" | 
+<div style="font-size:16pt;text-align:center">Bogagga xiriirka la leh</div><div style="font-size:11pt;text-align:center;">
+<font face="Andalus" size="5" color="navy">'''[[Bogga Hore]]''':</font>
+[[Wikipedia:Maqaallo Xul Ah|Maqaallo Xul Ah]]
+<br/>
+<font face="Andalus" size="5" color="navy">'''Bogagga ku saabsan''':</font>
+[[Wikipedia:Sawirka Maanta|Xeerka sawirka xulka]]
+----
+[[file:Gnome-applications-office.svg|center|80px]]<font face="Andalus" size="5" color="navy">[[Caawinaad:Kaydka|Kaydka wadahadalka]]</font><center><big><br/> ''' Sawirro la aqbali karo: [[Wikipedia:Soo Bandhigga Sawirka Xulka/Sawirro la ogolaaday/Kaydka 1|'''«1»''']] - [[Wkipedia:Soo Bandhigga Sawirka Xulka/Sawirro la ogolaaday/Kaydka 2|'''«2»''']] - [[Wikipedia:Soo Bandhigga Sawirka Xulka/Sawirro la ogolaaday/Kaydka 3|'''«3»''']]<br/> Sawirro La diiday: [[Wikipedia:Soo Bandhigga Sawirka Xulka/Sawirro la diiday/Kaydka1|'''«1»''']]</big></center>
+|}
+</div>
 
-Waxaaa ku yaaala ceel biyood
-Caan ah oo ladheho manqo casharo manqo waxay Amin San yihiin dadka degaankaas in biyaha ceelkaasu yihiin daawo
+Hassan gabood, waa aqoonyahan soomaaliyeed, ku hawlan in uu bulshadiisa ku soo kordhiyo afkaaro iyo adeegyo cusub oo la ma jeerto.
 
-Xudun waxaa hoos taga 
-Degaan balaadhan
-
-Awrbogays
-Sarmaayo
-Hol hol
-Lafwayne
-Jidbaale
-Bohol
-Toosan
-Dhaban
-Laaso curdan
-Siigo dheer 
-Kulaal
-Goroflay
-
-
-Waxaa ku nool degmada
-Dadka ugu wanaaagsan sool.waxa lagu sheega dad xarago badan  Marti soor wanAgsan hiil badan
-
-Waxaa degan beesha ugaadhyan
-Oo ah beesha ugu badan sool
+Waa aqoonyahan ka soo jeeda Gobolka Sanaag, ku soo barbaraay kuna soo qaadatay waxbarashadii asaasiga ahayd ilaa tii dugsiga sare, jaamacadana heerka kowaad ka qaatay jaamacad ku taalla magaalada Hargaysa oo la dhoho Jaamacada Hargaya.
 
 == Soo bandhigista sawirka ==
 <!-- Waxaa la rajeynayaa inaad ku dari doonto soo bandhigista sawirka qaybtaan hoose -->
