*Empty MediaWiki Message*

--- a/Template:Degmooyinka_Gobolka_Shabeellaha_Dhexe.mw
+++ b/Template:Degmooyinka_Gobolka_Shabeellaha_Dhexe.mw
@@ -1,6 +1,6 @@
 {{navbox
 |name  = Liiska Degmooyinka Gobolka Gobolka Shabeellaha Dhexe
-|title= [[Degmo|Degmooyinka]] Gobolka [[Shabeellaha Dhexe|Gobolka Gobolka Shabeellaha Dhexe]]
+|title= [[Degmo|Degmooyinka]] Gobolka [[Shabeellaha Dhexe|Shabeellaha Dhexe]]
 |listclass = plainlist
 |state= {{{state<includeonly>|collapsed</includeonly>}}}
 |liststyle = text-align:left
@@ -21,5 +21,6 @@
 * [[Miir taqwo]]
 * [[Caadleey]]
 * [[Gumaroow]]
+* [[Masaajid Cali Guduud]]
 }}<includeonly>{{#switch: {{PAGENAME}} | Gobolka Shabeellaha Dhexe = [[Category:Gobolka Shabeellaha Dhexe|Gobolka Gobolka Shabeellaha Dhexe]] | #default = [[Category:Gobolka Shabeellaha Dhexe| ]] [[Category:Gobolada Soomaaliya]]}}</includeonly><!--
 --><noinclude>{{Documentation}}</noinclude>
