*Empty MediaWiki Message*

--- a/Template:Degmooyinka_Gobolka_Shabeellaha_Dhexe.mw
+++ b/Template:Degmooyinka_Gobolka_Shabeellaha_Dhexe.mw
@@ -22,5 +22,5 @@
 * [[Caadleey]]
 * [[Gumaroow]]
 * [[Masaajid Cali Guduud]]
-}}<includeonly>{{#switch: {{PAGENAME}} | Gobolka Shabeellaha Dhexe = [[Category:Gobolka Shabeellaha Dhexe|Gobolka Gobolka Shabeellaha Dhexe]] | #default = [[Category:Gobolka Shabeellaha Dhexe| ]] [[Category:Gobolada Soomaaliya]]}}</includeonly><!--
+}}<includeonly>{{#switch: {{PAGENAME}} | Gobolka Shabeellaha Dhexe = [[Category:Shabeellaha Dhexe|Gobolka Shabeellaha Dhexe]] | #default = [[Category:Shabeellaha Dhexe| ]] [[Category:Gobolada Soomaaliya]]}}</includeonly><!--
 --><noinclude>{{Documentation}}</noinclude>
