--- a/Masaajid_Cali_Guduud.mw
+++ b/Masaajid_Cali_Guduud.mw
@@ -1,13 +1,18 @@
-''' Cali Gaduud''' wa dagmo ka tirsan Gobolka [[Shabeellaha Dhexe]]
+''' Masaajid Cali Guduud''' wa dagmo ka tirsan Gobolka [[Shabeellaha Dhexe]].
+Degmada waxaa hoos yimaad tuulooyin badan oo ay kamidyihiin Wargaadhi, Daarasalaam, Tawakal, Geedi-xeyr, Xassan-geedi, Qaahira, Maxaa-siciid
+burdacaar, baqdaad, xagareey, faqayaale, iyo kuwo kale oo fara badan.
+
+Degmada Masaajid Cali Gaduud waxa ay caan ku tahay waxyaabo badan oo ay kamid yihiin beerah, xoolaha, kalluunka iyo duur joog tiro badan.
+
+
+
+
+
+
+
+
+
+
+
 {{Gumud}}
-{{Gobolada Soomaaliya}}
-[[Category:Shabeellaha Dhexe]].
-Degmada waxaa hoos yimaad tuulooyin badan oo ay kamidyihiin: #Wargaadhi, #Daarasalaam, #Tawakal, #Geedi-xeyr, #Xassan-geedi, #Qaahira, #Maxaa-siciid
-#burdacaar, #baqdaad, #xagareey, #faqayaale, iyo kuwo kale oo fara badan.
-
-   Degmada Masaajid Cali Gaduud waa degmada kalliya ee wadanka oo dhan inta aan ogahay ee leh abtirsi sedex magac ah.
-Masaajid cali gaduud waxa uu caan ku yahay waxyaabo badan oo ay kamid yihiin beerah, xoolaha, kalluunka iyo duur joog tiro badan.
-
-Dhawaan filo warbixin dhameystiran.
-
-by: åbbås ahmed adow
+{{Template:Degmooyinka Gobolka Shabeellaha Dhexe}}
