waxaa ka saaray sawiro aan la heen xog xaqiijin ah

--- a/Si'iid_Harti.mw
+++ b/Si'iid_Harti.mw
@@ -1,6 +1,6 @@
 {{pp-protected|small=yes}}
 {{Infobox ethnic group|
-|group=Reer Darawiish ({{Flagicon image|Dhulbahante flag.png}} Dhulbahante) <br>  البهانتة) عشيرة درویش)|image= [[File:Daraawiish (Dhulbahante).png|300px]] 
+|group=Reer Darawiish  
 |flag = 
 |region1 = {{flagcountry|Soomaaliya}}
 |region3 = {{flagcountry|Itoobiya}}
@@ -10,7 +10,6 @@
 |related-c=[[Majeerteen]],  [[Dishiishe]], [[Warsangali]] iyo [[Harti]] iyo [[Daarood]]
 }}
 {{caddayn u baahan}}
-[[File:Dhulbahante flag.png|thumb|Calanka Dhulbahante]]
 '''Dhulbante''', ([[Carabi]]: عشيرة درویش, ''qabiilka darawiish'', [[Carabi]]: قبيلة درویش) sidoo kale loo yaqaano '''Beesha Darawiish''' ama '''siciid harti''' waa qabiil kamida [[Beelaha Soomaalida|qabaailka Soomaaliyeed]] ee dega waqooyiga iyo galbeedka [[Soomaaliya]], ee ku caan baxday waa qabiilka ee raacay [[Sayyidka]] iyo halganka [[Dawlada Darawiish]]. Dhulbahante waxaa kaloo loo yaqaan ''Reer Daraawiish'', waxayna kasoo jeedaan beel waynta [[Daarood]]. Deegaanada oo reer darawiish u gaar ah oo in kabadan 40 kun ee dad ku nool, waxaa ka mid ah hareeraha [[Fiqifuliye]], [[Las Anod]], [[Buuhoodle]] iyo [[Marqaanweyne]]. Dhaqanka Dhullbahante waa mid ka salaysan halgankii gumeysi-diid ee [[Dareema Caddo]] iyo [[Taleex]] ka gilgishey, ee aragtida ka dhiibta arrimaha Soomaaliya ee saamaynta tooska ah ku leh siyaasadda, iyagoo halgankii xornimo doonka gacan wayn kagaystay. Dhulbahante oo loogu yeedho daraawiish sababtuna ay tahay waxay ahaayee dadkii aas aasay oo hir galiyey dawladii islaamiga ahyd oo kadhisnayd gobolada SSC taasoo ay soomalida ugu yeeraan daraawiishta .
 
 ==Beesha==
@@ -29,8 +28,6 @@ Jilibada reer darawiish ee guud waa Faarax Garad, Maxamud garad iyo Bah Nugal.
 Jilibada reer darawiish ee ugu weyn waa Ugaadhyahan. Jibalada reer darawiish labaad ee ugu weyn waa Axmed garaad. Jilibada reer darawiish ee saddexaad ee ugu weyn waa Jama Siyad iyo Qayaad. Jilibada reer darawiiish ee afaraad ee ugu weyn waa Reer Hagar iyo Hayaag. Jilibada reer darawiish ee shanaad ee ugu weyn waa Baharsame.
 
 ==Shuruudaha==
-[[File:Garaadka guud ee reer darawiish garaad jaamac garaad cali.jpg|thumb|garaadka guud ee reer darawiish garaad jaamac garaad cali]]
-
 Shuruudaha Dhulbahante ama Beesha Darawiish waxaa ka mid ah:
 *Shuruudaha garaadka guud ee reer darawiish
 *Shuruudaha bandhigta Ismail Mire
