*Empty MediaWiki Message*

--- a/50_Cent.mw
+++ b/50_Cent.mw
@@ -1,5 +1,5 @@
 [[File:50 cent in concert.jpg|thumbnail|50 Cent]]
-'''50 Cent''' oo magaciisa saxda ah yahay '''Kurtis James Jakson III''' ({{lang-en|Curtis James Jackson III}}) (ku dhashay Queens, [[New York]], [[Maraykanka]] 6dii [[Luuliyo]], [[1975]]) waa [[fanaan]] qaada [[hees|heesaha raabka]] kaasi oo saldhigiisu yahay magaalada New York ee wadanka Maraykanka.
+'''50 Cent''' oo magaciisa saxda ah yahay '''Kurtis James Jakson III''' ({{lang-en|Curtis James Jackson III}}) (ku dhashay Queens, [[New York]], [[Maraykanka]] 6dii [[Luuliyo]], [[1975]]) waa [[fanaan]] qaada [[hees|heesaha raabka]] kaasi oo saldhigiisu yahay magaalada New York ee wadanka Maraykanka. Wat geht ab laaaaan.
 
 
 =Heesaha 50 Senti=
