--- a/Si'iid_Harti.mw
+++ b/Si'iid_Harti.mw
@@ -23,6 +23,9 @@ Asal ahaan odaygii Daarood ahaa waxa uu ku yimid Yaman Jabarti Ismaaciil isaga o
 ==Ciyaaraha==
 Ciyaaraha [[Dhulbahante]] waxaa ka mid ah [[Jandheer]].
 
+==Deegaan==
+Maslaxo haddii aad leedahay, magaalooyinka iyo tuulooyinka beelaha reer darawiish, ku tijaabi inaad eegtid, qoraalka ama maqaalka [[deegaanada beelaha reer darawiish]].
+
 ==Jilibada==
 Jilibada reer darawiish ee guud waa Faarax Garad, Maxamud garad iyo Bah Nugal.
 
