*Empty MediaWiki Message*

--- a/Maxamed_Abokor.mw
+++ b/Maxamed_Abokor.mw
@@ -14,7 +14,7 @@
 
 
 
-'''Maxamed Abokor'''  waa [[beel]] kamida beelaha [[Habar Jeclo]]. Waa beel baladhan oo 4 gobol [[Somaliland]] ka degta; Togdheer, Saaxil , Cayn iyo Saraar. Beeshu waxa oo kale ay degtaa [[Ethiopia]] (DDS) iyo [[Kenya]] (Isiolo, Tana River). Maxamed Abokor wuxuu soohdin la leeyahay Muuse Abokor (HY) dhinaca waqooyi-bari, [[reer darawiish]] dhinaca bariga, [[beesha darawiish]] dhinaca bari-konfuur, iyo Ogaden dhinaca koonfur, iyo garxajis iyo Habar Awal dhinaca galbeedka.
+'''Maxamed Abokor'''  waa [[beel]] kamida beelaha [[Habar Jeclo]]. Waa beel baladhan oo 4 gobol [[Somaliland]] ka degta; Togdheer, Saaxil , Cayn iyo Saraar. Beeshu waxa oo kale ay degtaa [[Ethiopia]] (DDS) iyo [[Kenya]] (Isiolo, Tana River). Maxamed Abokor wuxuu soohdin la leeyahay Muuse Abokor (HJ) dhinaca waqooyi-bari, [[reer darawiish]] dhinaca bariga, [[beesha darawiish]] dhinaca bari-konfuur, iyo Ogaden dhinaca koonfur, iyo garxajis iyo Habar Awal dhinaca galbeedka.
 
 == Siday Beeshu U Kala Baxdo ==
 
