--- a/Warfa_A_Garaad.mw
+++ b/Warfa_A_Garaad.mw
@@ -1,3 +1,3 @@
 '''Warfa Axmed Garaad''' waa qabiil [[Bahgeri Dhulbahante]].
 
-[[Category:Qabiilada Soomaalida]]
+[[Category:Qabiilada Soomaalida]] waa kuwa ugu fulysan dhulbahante
