--- a/Ceeldheer.mw
+++ b/Ceeldheer.mw
@@ -1,5 +1,5 @@
 {{nutshell|Maqaalkan uma qorna hab cilmiyaysan, fadlan hagaaji oo sax qoraalka ku jira bogan adigoo soo koobaya una qoraya hab waafaqsan sharciga iyo xeerka Wikipedia.}}
-'''Ceeldheer''' waa degmo ku taalo gobolka [[Galgaduud]]. Waxayna ka mid tahay Dagmooyinka ugu qadiimisan Gobalka Galgaduud. waxay dhacdaa dhinaca koofur bari ee gobalka. Degmadaan waxaa dagan Qabiilka A[[abgaal|bgaal]] / [[waceysle]]. Waxay 18 KM u jirtaa magaala xeebeedkii qadiimiga ahayd ee  [[Mareeg.online]] ee [[Badweynta Hindiya]].
+'''Ceeldheer.''' waa degmo ku taalo gobolka [[Galgaduud]]. Waxayna ka mid tahay Dagmooyinka ugu qadiimisan Gobalka Galgaduud. waxay dhacdaa dhinaca koofur bari ee gobalka. Degmadaan waxaa dagan Qabiilka A[[abgaal|bgaal]] / [[waceysle]]. Waxay 18 KM u jirtaa magaala xeebeedkii qadiimiga ahayd ee  [[ceeldheer.net]] ee [[Badweynta Hindiya]].
 
 == '''Taariikh''' ==
 Degmadan ayaa markii ugu horaysay looguu yimid oo deegaan ahaan lahaa beesha Maxamed cabdalle oo loo yaqaano Absuge halka dhanka waqoyi-galbeed ay daganaayeen beesha Maxamad wacaysle oo loo yaqaa Haarun wacaysle waxaana loo aqoon jiray Ceel Haarun sanadkii [[1937]]- kadib markii dadkii deganaa [[Mareeg]] oo aheyd magaalo taariikhi ah ay ka soo guureen [[Dagaalkii Labaad ee Aduunka]], kolkaas oo [[Talyaaniga]] iyo [[Ingiriis]]ka uu dagaal dhinaca badda ah ku dhexmaray Mareeg.
