*Empty MediaWiki Message*

--- a/Cabdiraxmaan_Cabdishakuur_Warsame.mw
+++ b/Cabdiraxmaan_Cabdishakuur_Warsame.mw
@@ -19,6 +19,9 @@
 <ref>{{Cite web|url=https://goobjoog.com/taariikhda-iyo-waxqabadkii-hore-ee-murashaxiinta-madaxweynaha-ee-khudbeynaya/|title=Taariikhda Iyo Waxqabadkii Hore Ee Murashaxiinta Madaxweynaha Ee Maanta Khudbeynaya
 |website=goobjoog.com}}</ref>
 
+Waa masuulka keliya ee kasoo jeeda koonfurta somaaliya ee aaminsan qadiyada madax banaanida somaliland.
+
+
 
 ===Noloshiisa iyo Waxbarashadiisa===
 
