*Empty MediaWiki Message*

--- a/Saldanadii_Cal_Miskaad.mw
+++ b/Saldanadii_Cal_Miskaad.mw
@@ -27,7 +27,7 @@
 |capital                = [[Boosaaso]]
 |common_languages       = [[Af-Soomaali]]{{·}}[[Af Carabi]]
 |government_type        = [[Ugaastooyo]]
-|leader1                = Cali Gurey
+|leader1                = [[Cali Gurey]]
 |year_leader1           = 1886-1929
 |leader2                = 
 |year_leader2           = 
