--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -76,4 +76,21 @@ Wuxuu yiri;
 
 * Wax la yicib wiyeer maalintey, yaabatiin tahaye!
 
+
+
+'''Cali Gurey Iyo Boqor Cismaan'''
+
+Ugaas Cali Guray oo hogaaminjirey Beesha Dishiishe iyo qaar kamid ah Beelaha Majeerteen iyo Warsangeli iyo Boqor Cismaan oo hogaaminjirey inta badan Beesha Majeerteen waxaa ka dhex taagnaan jirey ismaandhaaf aad u weyn, iyadoo ay saa tahay ayaa qaar ka mid ah beelaha Majeerteen ee deganaa deegaanadii ay ka talin jirtay [[Saldanadii Cal Miskaad]] ee Cali Gurey madaxda ka ahaa u iisheen xaga Boqor Cismaan iyagoo markaa eegayey in marka xagga haybta ay noqoto uu Boqor Cismaan xigo.
+Muddo markii ay maqnaayeen ayeey Boqor Cismaan ka waayeen wixii ay ka naawilayeen kadib waxay go'aansadeen inay [[Bosaso]] dib ugu laabtaan Ugaas Cali Gurey ayaa loo sheegay dadki berigaas tegay inay dib usoo laabteen, Cali Gurey wuxuu amray in lasoo dhoweeyo [[Harti]]guna uusan dhul kala lahayn, wuxuuna tiriyey gabaygaan caanka ka noqday bulshada Soomaaliyeed dhexdeeda.
+
+*Qaaciidadaan tirin jiriyo helay qasiidkiiye
+*Qardhe maan ka guro waa xikmado ii qorraan jiraye
+*Qawiga iyo laciifkaan sharciga wax ugu qaybshaaye
+*Qaamuus nin galay baa yaqaan qawlka raajaxa e
+*Qalalaasyo dirireed halkeey qac iyo weey joogto
+*Qassaamkaan ku dhaartaye ma jiro nin iga qab weynaane
+*Nin cismaan u qoojaajsadaan qurux ka dheelmayne
+*Ugaas qumiya mooyee hunguri nooma qooshana e
+*Qaddar eebe weeyee tolow hayna kala qubina.
+
 [[Category:Taariikhda Soomaaliya]]
