*Empty MediaWiki Message*

--- a/Al-Shabaab.mw
+++ b/Al-Shabaab.mw
@@ -1,6 +1,6 @@
 [[File:ShababFlag.svg|thumbnail|al-Shabaab]]
 
-'''al-Shabaab''' magaca ay la baxday waa (Xarakada Mujaahidiinta al-Shabaab) waa oogayaasha ficillada xagjirnimada, fallaago ama mucaarad ku ah Somalinimada,waxaana  aasaasay Axmed Godane oo abaalmarin 7 milyan ah la dul dhigay madaxiisa. Waa na jabhad khibrad u leh argagixinta iyo faafinta hanjabaad iyo qorsheynta masiibooyinka. 
+'''al-Shabaab''' magaca ay la baxday waa (Xarakada Mujaahidiinta al-Shabaab) waa fallaagad  oo daroogaha iyo balwad xaraashkeed ka qaybgasha iyo oogayaasha ficillada xagjirnimada, fallaago ama mucaarad ku ah Somalinimada,waxaana  aasaasay Axmed Godane oo abaalmarin 7 milyan ah la dul dhigay madaxiisa. Waa na jabhad khibrad u leh argagixinta iyo faafinta hanjabaad iyo qorsheynta masiibooyinka. 
 
 Calaamadaha shaqsiga ee jaaliyaasha Shabaab waxaa ka mid ah kuwa riyaaq ku arka shacabka Carabta. Waa na jabhad ee diidsan sahlidda qaranka, xasiloon, amni, cowlinimada iyo waxyaabaha aadanaha fitrah u ah.
 
