Degmooyinka Gobalka Bakool Soomaaliyaa

--- a/Category:Gobolada_Soomaaliya.mw
+++ b/Category:Gobolada_Soomaaliya.mw
@@ -1,3 +1,9 @@
-{{Commonscat|Regions of Somalia}}
-
-[[Category:Juqraafiga Soomaaliya]]
+Demooyinka gobalka bakool
+Bakool waxaa uukuyaalaa koonfurta Soomaaliyaa
+Wuxuuna kakoobanyahay lix 6 degmo waxayna kala yihiin 
+1. Xudur magaala madaxda Gobalka Bakool
+2. Waajid
+3. Buurdhuxunle
+4. Rabdhuure
+5. Teyeeglow
+6. Ceelberde
