--- a/Beesha_Ciise.mw
+++ b/Beesha_Ciise.mw
@@ -1,5 +1,5 @@
 {{agoon}}
-Beelwaynta Ciise waxay kamid tahay beelaha Dir. Beesha Ciise waxay degtaa dalka (([[Djibouti]])), Gobolka [[Awdal]] ee Somalilia iyo Gobolka [[Siti]] ee Dawlad Deegaanka Soomaalida Itoobiya, Ismaamulka magaalada [[Diridhabe]] iyo Zone 3 ee dowlad deganka cafarta gaar ahaan magaaloyinka kala ah  (Cundufo), (Cadhaytu) iyo (Gadhamalu). Beesha waxay walaalo hoosaad yihiin Beelaha Abgaal ee Hawiye 
+Beelwaynta Ciise waxay kamid tahay beelaha Dir. Beesha Ciise waxay degtaa dalka (([[Djibouti]])), Gobolka [[Awdal]] ee Somalililand iyo Gobolka [[Siti]] ee Dawlad Deegaanka Soomaalida Itoobiya, Ismaamulka magaalada [[Diridhabe]] iyo Zone 3 ee dowlad deganka cafarta gaar ahaan magaaloyinka kala ah  (Cundufo), (Cadhaytu) iyo (Gadhamalu). Beesha waxay walaalo hoosaad yihiin Beelaha Abgaal ee Hawiye 
 ee Degta gobolada Banaadir, Mudug iyo Hirshabeele.
 
 
