--- a/Soomaaliland.mw
+++ b/Soomaaliland.mw
@@ -777,8 +777,13 @@ Guddoomiyaha Guddidii ka soo shaqaysay isku xidhka shirkadahan Isgaadhsiinta ee 
 *2- [[18. May maalinta xoriyada somaliland]] oo ku beegan 18.May.1991 kii maalintii shirweynihi shacabka reer somaliland gua'an sadiin guuni isotaga jumhuriyada somaliland ee ka dhacay Magaalada Burco.
 *3- Labada Ciidood ee Islaamka
 *4- Maalmaha Caalamiga ah sida maalinta shaqaalaha, [[AIDS|Aydhiska]], iwm.
+
+===Qabiilada===
+Qabiilada weyn ee oo ku nool Somaliland waxaa ka mid ah [[Warsangeli]], [[reer darawiish]], Habar Awal, Garhajis, Habar jeclo, Ciise, iyo Gadabuursi, laakin [[reer darawiish]] iyo [[Warsangeli]] badankood waxay tageersan yihiin jiritaanka qowmiyadda [[Soomaaliya]].
+
 ===Luqadaha===
 '''Luqadaha Somaliland''' Somaliland waxa lagaga hadlaa luqada somaliga oo boqolkiiba boqol ay kuhadalaan dadka kudhaqan somaliland waliba lahjada afsoomaaliga ugu nadiifsan amaba ugu dhaw marka laeego luqada somaliga ee qadiimka ah dadka kudhaqan somaliland lahjada afsomaliga ee ay kuhadlaan waxa ay shabahdaa ta wararka lagusiidaayo amaba saxaafada loo adeegsado. waxa kale oo somaliland lagaga hadlaa [[Carabi]]ga iyo [[Ingiriis]]iga oo ah laba luqadood oo iyana wadanka si rasmi ah looga isticmaalo, qodobka lixaad ee wadanka uyaala waxa kuqoran in somaliga carabiga iyo ingriisugu ay yihiin sadaxda luqadood ee wadanka sirasmi ah looga isticmaali karo
+
 ==Waxbarashada==
 * [[Jaamacada Hargaysa]]
 * [[Jaamacadda Camuud]]
