--- a/Faarax_Sugulle_Kaligiimaadhle.mw
+++ b/Faarax_Sugulle_Kaligiimaadhle.mw
@@ -1,3 +1,1 @@
-Faarax Sugulle Kaligiimaadhle, dawladda Darwiish, wuxuu ka ahaa nin [[Qusuusi]] ah.
-
-[[Category:Taariikhda Soomaaliya]]
+#redirect [[Sool]]
