--- a/Soomaaliland.mw
+++ b/Soomaaliland.mw
@@ -779,6 +779,8 @@ Guddoomiyaha Guddidii ka soo shaqaysay isku xidhka shirkadahan Isgaadhsiinta ee 
 *4- Maalmaha Caalamiga ah sida maalinta shaqaalaha, [[AIDS|Aydhiska]], iwm.
 
 ===Qabiilada===
+Qabiilada waqooyiga Soomaaliya waxay u kala baxaan naanaysyo. Waxaa taas ka mid ah, waqooyiga dir oo ku magacdheer Samaaroon, Ciidagale iyo habaryoonis oo ku magacdheer Garhajis, maxamud Harti oo ku magacdheer Warsangeli, iyo Dhulbahante oo ku magacdheer [[reer darawiish]].
+
 Qabiilada weyn ee oo ku nool Somaliland waxaa ka mid ah [[Warsangeli]], [[reer darawiish]], Habar Awal, Garhajis, Habar jeclo, Ciise, iyo Gadabuursi, laakin [[reer darawiish]] iyo [[Warsangeli]] badankood waxay tageersan yihiin jiritaanka qowmiyadda [[Soomaaliya]].
 
 ===Luqadaha===
