--- a/Puntland.mw
+++ b/Puntland.mw
@@ -51,7 +51,10 @@ Waardiyaha puntland ee la yidhaahdo ''ciidanka daraawiishta Puntland'', waxaa lo
 
 
 == Dawladda Puntland ==
-Dawladda Puntland ee somaliyeed waxaa la asaasay 1998kii, waxaana asaasay isimo ,siyaasiyiin,ganacsato,culimaa,udiin ,haween dadka ugu caansanaa ee isugu yimi shirkii GAROWE kadhacay 1998 waxaa kamid ahaa madaxweynihii hore ee Dawladda DFKMG [[Cabdullaahi Yuusuf Axmed]], Ibrahim Abshir Ibrahim, Beeldaaje Xaaji Cabdullahi, Suldaan Ciise Xasan Cumar, [[Ugaas Yaasiin Ugaas Cabdirixmaan| Ugaas Yaasiin]], Suldaan Saciid Cabdisalaan, Islaan Maxamed iyo Garaad Jaamac ,sababta loo sameeyay maamulkaan wuxuu ahaa si loo badbaadiyo shacabka woqooyiga. Maamulka puntland aad ayuu uuga duwanyahay maamulka kale ee somaliland. Puntland ma raadinooso kala goynta dalka somalia, dadkaan waa dad wadaniyiin ah . shacabka puntland run ahaantii waa dad markasto raadiyo isku keenta shacabka soomaaliyeed. Puntland waxee leedahay maamul xukumo iyo barlamaan u gooni ah iyo wasiiro maamulo shacab woqooyiga. Madaxweynihii ugu horeeyay ee puntland woxoo ahaa Cabdullahi Yuusuf, waxaa ku xigay Maxamed Abdi Xaashi waxaa ku xigay Cade Muuse waxaa ku sii xigay Cabdiraxmaan Maxamuud faroole, Hadana waxaa xilka hayya Cabdiwali Maxamed Cali.
+Dawladda Puntland ee somaliyeed waxaa la asaasay 1998kii, waxaana asaasay isimo ,siyaasiyiin,ganacsato,culimaa,udiin ,haween dadka ugu caansanaa ee isugu yimi shirkii GAROWE kadhacay 1998 waxaa kamid ahaa madaxweynihii hore ee Dawladda DFKMG [[Cabdullaahi Yuusuf Axmed]], Ibrahim Abshir Ibrahim, Beeldaaje Xaaji Cabdullahi, Suldaan Ciise Xasan Cumar, [[Ugaas Yaasiin Ugaas Cabdirixmaan| Ugaas Yaasiin]], Suldaan Saciid Cabdisalaan, Islaan Maxamed iyo Garaad Jaamac ,sababta loo sameeyay maamulkaan wuxuu ahaa si loo badbaadiyo shacabka woqooyiga. Maamulka puntland aad ayuu uuga duwanyahay maamulka kale ee somaliland. Puntland ma raadinooso kala goynta dalka somalia, dadkaan waa dad wadaniyiin ah . shacabka puntland run ahaantii waa dad markasto raadiyo isku keenta shacabka soomaaliyeed. Puntland waxee leedahay maamul xukumo iyo barlamaan u gooni ah iyo wasiiro maamulo shacab woqooyiga. 
+
+===Hormuudka===
+Madaxweynihii ugu horeeyay ee puntland woxoo ahaa Cabdullahi Yuusuf, waxaa ku xigay Maxamed Abdi Xaashi waxaa ku xigay Cade Muuse waxaa ku sii xigay Cabdiraxmaan Maxamuud faroole, Hadana waxaa xilka hayya Cabdiwali Maxamed Cali.
 
 == caasimada puntland ==
 
